<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.comics.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <RelativeLayout
        android:id="@+id/up"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/intro"
            style="@style/PurpleText" />

        <ImageView
            android:id="@+id/imageView"
            style="@style/WowImage"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/about"
            style="@style/Description" />

        <TextView
            android:id="@+id/contacts"
            style="@style/Contacts" />

        <ImageView
            android:id="@+id/mail"
            style="@style/Icons"
            android:layout_below="@id/contacts"
            android:src="@drawable/mail"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/call"
            style="@style/Icons.below"
            android:layout_below="@id/mail"
            android:src="@drawable/call"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/web"
            style="@style/Icons.below"
            android:layout_below="@id/call"
            android:src="@drawable/globe"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/time"
            style="@style/Icons.below"
            android:layout_below="@id/web"
            android:src="@drawable/calendar"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/place"
            style="@style/Icons.below"
            android:layout_below="@id/time"
            android:src="@drawable/compass"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/TextViewStyle"
            android:layout_below="@id/contacts"
            android:layout_marginTop="@dimen/text_padding"
            android:text="@string/mail" />

        <TextView
            style="@style/TextViewStyle"
            android:layout_below="@id/mail"
            android:layout_marginTop="@dimen/padding_8"
            android:autoLink="phone"
            android:text="@string/phone" />

        <TextView
            style="@style/TextViewStyle"
            android:layout_below="@id/call"
            android:autoLink="web"
            android:text="@string/site" />

        <TextView
            style="@style/TextViewStyle"
            android:layout_below="@id/web"
            android:layout_marginTop="@dimen/space_between_2"
            android:text="@string/hours" />

        <TextView
            style="@style/TextViewStyle"
            android:layout_below="@id/time"
            android:text="@string/place" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
